tests/baselines/reference/parserNoASIOnCallAfterFunctionExpression1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/parserNoASIOnCallAfterFunctionExpression1.ts (2 errors) ====
    var x = function () { }
            ~~~~~~~~~~~~~~~
    (<any>window).foo;
    ~~~~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
          ~~~~~~
!!! error TS2304: Cannot find name 'window'.
    